<?xml version="1.0"?>
<package format="2">
  <name>ds_sim</name>
  <version>0.0.0</version>
  <description>General plugins, urdf, etc for simulating vehicles with the DSL package.  Intended to focus on common sensors, actuators, etc.</description>

  <maintainer email="ivaughn@whoi.edu">Ian Vaughn</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="repository">https://bitbucket.org/whoidsl/ds_sim</url> -->

  <author email="ssuman@whoi.edu">Stefano Suman</author>
  <author email="zberkowitz@whoi.edu">Zac Berkowitzh</author>
  <author email="jvaccaro@whoi.edu">Jennifer Vaccaro</author>
  <author email="jhowland@whoi.edu">Jon Howland</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>ds_msgs</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>ds_msgs</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ds_msgs</exec_depend>
  <exec_depend>ros-kinetic-joystick-drivers</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
